@@ -1829,7 +1829,10 @@ foreach current_target $target_list {
 			# list of directories.  Look for match on each item.
 			set found 0
 			foreach directory $cmdline_dir_to_run {
-			    if {[string match $directory $dir]} {
+			    # Look for a directory that ends with the
+			    # provided --directory name.
+			    if {[string match "$directory" $dir]
+				|| [string match "*/$directory" $dir]} {
 				set found 1
 				break
 			    }
